# bench-fib-rs

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
src/: lib.rs
src/fibonacci.egg-info/: PKG-INFO  SOURCES.txt
