[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci"
version = "0.1.0"
dependencies = ["pytest", "pytest-benchmark"]
requires-python = ">= 3.11"
authors = [{ name = "Thiago Lopes", email = "thiago.lopes.dev@gmail.com" }]
readme = "README.md"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "N", "S", "PT", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
